# HJH_Quiz

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  gunicorn.conf.py  pyproject.toml
backend/: main.py
backend/api/v1/: auth.py  quiz.py  router.py  users.py
backend/core/: config.py  init_db.py  secret_key.py  session.py
backend/crud/: __init__.py  base.py  choice.py  question.py  quiz.py  user.py
backend/models/: __init__.py  choice.py  question.py  quiz.py  user.py  user_quiz.py
backend/models/migrations/: env.py
backend/models/migrations/versions/: 7e7c9238e52b_initial.py
backend/schemas/: __init__.py  auth.py  choice.py  question.py  quiz.py  user.py
backend/services/: auth.py  choice.py  question.py  quiz.py  user.py
backend/tests/: conftest.py  test_auth.py  test_quiz.py  test_user.py
backend/utils/: deps.py  redis.py  security.py  validator.py
scripts/: init-project.sh
