[tool.poetry]
name = "Quiz"
version = "0.1.0"
description = ""
authors = ["hongjaehyeong <secrett2633@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = {extras = ["email"], version = "^1.10.21"}
SQLAlchemy = {extras = ["mypy"], version = "^2.0.17"}
asyncpg = "^0.27.0"
phonenumbers = "^8.13.15"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
toml = "^0.10.2"
redis = "^5.2.1"
python-multipart = "^0.0.20"
alembic = "1.13.3"
greenlet = "3.1.1"
bcrypt = "^4.3.0"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
aiosqlite = "^0.19.0"
pytest = {extras = ["asyncio"], version = "^7.3.2"}
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
types-redis = "^4.5.5"
types-toml = "^0.10.8.6"
mypy = "^1.4.1"
pre-commit = "^3.3.2"
black = "^23.3.0"
autoflake = "^2.1.1"
isort = "^5.12.0"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
bandit = "^1.7.5"
pyupgrade = "^3.7.0"
ipykernel = "^6.24.0"
ruff = "^0.0.278"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
allow_untyped_decorators = true
pretty = true
show_error_codes = true
implicit_reexport = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
exclude = ["tests"]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
